(rule
 (targets liblib.a)
 (deps
  (glob_files *.rs))
 (action
  (progn
   (run cargo build --target-dir %{project_root}/../../target --release)
   (run mv %{project_root}/../../target/release/liblib.a liblib.a))))

(library
 (name lib)
 (libraries benchmark)
 (public_name lib)
 (foreign_archives lib)
 (c_library_flags
  (-lpthread -lc -lm)))
